[package]
name = "replace_word"
version = "0.1.1"
edition = "2021"
authors = ["Ryan <rpclaird@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
regex = "1.5.4"
